<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     android:gravity="top"
    android:padding="30dp"
    android:shrinkColumns="0"
    android:stretchColumns="1">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Registeration Screen"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal|center_vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="fill_horizontal|center_vertical"
                    android:text="@string/Name" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/txtName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal|center_vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="fill_horizontal|center_vertical"
                    android:text="@string/Email" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress" />
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="fill_horizontal|center_vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="fill_horizontal|center_vertical"
                    android:text="@string/txtPassword" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword" />
            </TableRow>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonReg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/buttonReg2"
                android:layout_marginTop="30dp"
                android:textColor="@android:color/white" />


</TableLayout>